--- a/android/app/src/main/res/layout/fragment_scan.xml
+++ b/android/app/src/main/res/layout/fragment_scan.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/scan_button"
+        android:background="@color/button_active"
         app:layout_constraintBottom_toTopOf="@+id/device_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.224"
@@ -29,6 +30,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
         android:text="@string/pair_button"
+        android:background="@color/button_active"
         app:layout_constraintBottom_toTopOf="@+id/unpair_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
@@ -40,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:text="@string/unpair_button"
+        android:background="@color/button_active"
         app:layout_constraintBottom_toTopOf="@+id/routes_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
@@ -53,6 +56,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:text="@string/routes_button"
+        android:background="@color/button_active"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
