Subject: Fixed Layout
Improved the layout of the app to look better.
The buttons are now symmetrical.
Added border to the device list.
Added a colour for our standard background, however, standard background
doesn't work yet.

--- a/android/app/src/main/res/layout/fragment_scan.xml
+++ b/android/app/src/main/res/layout/fragment_scan.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/scan_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,8 +13,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/scan_button"
         android:background="@color/button_active"
+        android:text="@string/scan_button"
         app:layout_constraintBottom_toTopOf="@+id/device_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.224"
@@ -29,8 +29,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
-        android:text="@string/pair_button"
         android:background="@color/button_active"
+        android:text="@string/pair_button"
         app:layout_constraintBottom_toTopOf="@+id/unpair_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
@@ -41,8 +41,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:text="@string/unpair_button"
         android:background="@color/button_active"
+        android:text="@string/unpair_button"
         app:layout_constraintBottom_toTopOf="@+id/routes_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
@@ -55,8 +55,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:text="@string/routes_button"
         android:background="@color/button_active"
+        android:text="@string/routes_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
@@ -85,8 +85,9 @@
         android:layout_height="178dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="52dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/device_list"
         app:layout_constraintBottom_toTopOf="@+id/pair_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
