--- a/android/app/src/main/res/layout/fragment_gateway.xml
+++ b/android/app/src/main/res/layout/fragment_gateway.xml
@@ -9,10 +9,10 @@
         android:id="@+id/collection_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
         android:layout_marginTop="51dp"
-        android:text="@string/collection_button"
         android:background="@color/button_active"
+        android:text="@string/collection_button"
+        app:layout_constraintEnd_toEndOf="@+id/vehicle_symbol"
         app:layout_constraintStart_toStartOf="@+id/vehicle_symbol"
         app:layout_constraintTop_toBottomOf="@+id/vehicle_symbol" />
 
@@ -20,10 +20,10 @@
         android:id="@+id/draw_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="22dp"
-        android:text="@string/draw_button"
         android:background="@color/button_active"
+        android:text="@string/draw_button"
+        app:layout_constraintEnd_toEndOf="@+id/collection_button"
         app:layout_constraintStart_toStartOf="@+id/collection_button"
         app:layout_constraintTop_toBottomOf="@+id/collection_button" />
 
