--- a/android/app/src/main/res/layout/fragment_start.xml
+++ b/android/app/src/main/res/layout/fragment_start.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,16 +10,12 @@
         android:id="@+id/find_vehicle_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/find_vehicle_button"
+        android:layout_marginBottom="100dp"
         android:background="@color/button_active"
+        android:text="@string/find_vehicle_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.554"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.837" />
+        app:layout_constraintEnd_toEndOf="@+id/radar_symbol"
+        app:layout_constraintStart_toStartOf="@+id/radar_symbol" />
 
     <ImageView
         android:id="@+id/radar_symbol"
