--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,9 +3,13 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="appBackground">#000000</color>
 
     <!-- Button -->
     <color name="button_non_active">#A9A9A9</color>
     <color name="button_active">#D81B60</color>
+
+    <!-- ListView -->
+    <color name="device_list_border">#717171</color>
 
 </resources>
