--- a/android/app/src/main/res/layout/listview_item.xml
+++ b/android/app/src/main/res/layout/listview_item.xml
@@ -6,7 +6,7 @@
     <TextView
         android:id="@+id/device_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:textSize="13dp" />
 
 </android.support.constraint.ConstraintLayout>
