--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -12,5 +12,8 @@
     <!-- ListView -->
     <color name="device_list_border">#717171</color>
 
+    <!-- Backgrounds -->
+    <color name="darkBackground">#111111</color>
+
 
 </resources>
