--- a/android/app/src/main/res/layout/fragment_start.xml
+++ b/android/app/src/main/res/layout/fragment_start.xml
@@ -4,14 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/darkBackground">
 
     <Button
         android:id="@+id/find_vehicle_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
-        android:background="@color/button_active"
+        android:background="@drawable/button"
         android:text="@string/find_vehicle_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/radar_symbol"
