--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -15,5 +15,10 @@
     <!-- Backgrounds -->
     <color name="darkBackground">#111111</color>
 
+    <!-- TextColour -->
+    <color name="deviceNameColour">#717171</color>
+
+
+
 
 </resources>
