--- a/android/app/src/main/res/drawable/button_background.xml
+++ b/android/app/src/main/res/drawable/button_background.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
     <!-- button when active -->
     <item android:state_activated="true"
         android:drawable="@color/button_active"/>
@@ -8,4 +7,9 @@
     <!-- button when not-active -->
     <item android:drawable="@color/button_non_active"/>
 
+    <shape>
+        android:shape="rectangle"
+    </shape>
+
 </selector>
+
