--- a/android/app/src/main/res/layout/fragment_collection.xml
+++ b/android/app/src/main/res/layout/fragment_collection.xml
@@ -21,7 +21,6 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-
     <TextView
         android:id="@+id/device_collectionFragment"
         android:layout_width="280dp"
@@ -29,10 +28,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:textColor="@color/deviceNameColour"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/deviceNameColour"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
