--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="appBackground">#000000</color>
+    <color name="appBackground">#ffffff</color>
 
     <!-- Button -->
     <color name="button_non_active">#A9A9A9</color>
@@ -13,7 +13,7 @@
     <color name="device_list_border">#717171</color>
 
     <!-- Backgrounds -->
-    <color name="darkBackground">#111111</color>
+    <color name="darkBackground">#ffffff</color>
 
     <!-- TextColour -->
     <color name="deviceNameColour">#717171</color>
