--- a/android/app/src/main/res/layout/dialog_custom.xml
+++ b/android/app/src/main/res/layout/dialog_custom.xml
@@ -10,7 +10,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:padding="10dp">
+        android:padding="10dp"
+        >
 
         <TextView
             android:layout_width="match_parent"
