Subject: add button states
Description:
- Add button correct states
- Add button layout

--- a/android/app/src/main/res/layout/fragment_draw.xml
+++ b/android/app/src/main/res/layout/fragment_draw.xml
@@ -6,7 +6,7 @@
     android:background="@color/darkBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.hajken.DrawFragment">
+    tools:context="com.example.hajken.fragments.DrawFragment">
 
 
     <Button
