--- a/android/app/src/main/res/drawable/device_list.xml
+++ b/android/app/src/main/res/drawable/device_list.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#ffff"
-        android:endColor="#ffff"
+    <gradient android:startColor="@color/darkBackground"
+        android:endColor="@color/darkBackground"
         android:angle="270" />
-    <corners android:radius="3dp" />
-    <stroke android:width="10px" android:color="#717171" />
+    <corners android:radius="10dp"/>
+    <stroke android:width="2px" android:color="#FFFFFF" />
 </shape>
