--- a/android/app/src/main/res/layout/fragment_google_maps.xml
+++ b/android/app/src/main/res/layout/fragment_google_maps.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GoogleMapsFragment">
+    tools:context=".fragments.GoogleMapsFragment">
 
 
     <com.google.android.gms.maps.MapView
