Subject: add button text color and state adaptation
Description:
- Add button text color
- Add state adaptation of buttons, color and background
§

--- a/android/app/src/main/res/drawable/device_list.xml
+++ b/android/app/src/main/res/drawable/device_list.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient android:startColor="@color/darkBackground"
         android:endColor="@color/darkBackground"
-        android:angle="270" />
+        android:angle="270"/>
     <corners android:radius="10dp"/>
-    <stroke android:width="2px" android:color="#FFFFFF" />
+    <stroke android:width="2dp" android:color="#FFFFFF" />
 </shape>
