--- a/android/app/src/main/res/layout/fragment_scan.xml
+++ b/android/app/src/main/res/layout/fragment_scan.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scan_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,16 +9,16 @@
     <Button
         android:id="@+id/scan_button"
         android:layout_width="300dp"
-        android:layout_height="51dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/button2"
+        android:background="@drawable/button"
         android:text="@string/scan_button"
-        android:textColor="#ffffff"
+        android:textColor="@drawable/button_text_color"
         app:layout_constraintBottom_toTopOf="@+id/unpair_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
@@ -29,16 +28,16 @@
     <Button
         android:id="@+id/unpair_button"
         android:layout_width="300dp"
-        android:layout_height="51dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/button2"
+        android:background="@drawable/button"
         android:text="@string/unpair_button"
-        android:textColor="#ffffff"
+        android:textColor="@drawable/button_text_color"
         app:layout_constraintBottom_toTopOf="@+id/routes_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
@@ -48,16 +47,16 @@
     <Button
         android:id="@+id/routes_button"
         android:layout_width="300dp"
-        android:layout_height="51dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="100dp"
-        android:background="@drawable/button2"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/button"
         android:text="@string/routes_button"
-        android:textColor="#ffffff"
+        android:textColor="@drawable/button_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
@@ -66,18 +65,19 @@
 
     <ListView
         android:id="@+id/device_list"
-        android:layout_width="303dp"
-        android:layout_height="178dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/device_list"
         android:textColor="@color/deviceNameColour"
         app:layout_constraintBottom_toTopOf="@+id/scan_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.39"
+        app:layout_constraintVertical_chainStyle="spread" />
 
 </android.support.constraint.ConstraintLayout>
