--- a/android/app/src/main/res/drawable/button.xml
+++ b/android/app/src/main/res/drawable/button.xml
@@ -1,24 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_activated="false" >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="3dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#FFFFFF" android:endColor="#FFFFFF"  />
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- button state when not activated -->
+    <item
+        android:state_activated="false">
+        <shape>
+            <solid
+                android:color="@color/button_non_active">
+            </solid>
+            <stroke
+                android:color="@color/button_corners"
+                android:width="2dp">
+            </stroke>
+            <corners
+                android:radius="150dp">
+            </corners>
         </shape>
     </item>
-    <item android:state_activated="true">
-        <shape android:shape="rectangle"  >
-            <corners android:radius="3dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <solid android:color="#58857e"/>
+
+    <!-- button state when active -->
+    <item
+        android:state_activated="true">
+        <shape>
+            <solid
+                android:color="@color/button_active">
+            </solid>
+            <stroke
+                android:color="@color/button_corners"
+                android:width="2dp">
+            </stroke>
+            <corners
+                android:radius="150dp">
+            </corners>
         </shape>
     </item>
-    <item >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="3dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#8dbab3" android:endColor="#58857e" />
-        </shape>
-    </item>
+
 </selector>
